--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
     "dev": "wrangler dev",
     "deploy": "wrangler deploy --minify",
     "cf-typegen": "wrangler types --env-interface CloudflareBindings"
-  },  
+  },
   "dependencies": {
+    "@orca-so/sdk": "^1.2.26",
+    "@solana/web3.js": "^1.95.8",
     "hono": "^4.6.3"
   },
   "devDependencies": {
